# botnetcore

./: .gitignore  Cargo.toml  README.md
botclient/: Cargo.toml
botserver/src/: main.rs
src/: commands.rs  main.rs
