[package]
name = "notbotnet"
version = "0.1.0"
edition = "2021"

[target.'cfg(all(windows, target_env = "msvc"))']
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
directories = "6.0.0"
reqwest = "0.12.12"
rsa = { version = "0.9.7", features = ["sha2"] }
tokio = { version = "1.43.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["consoleapi", "wincon"] }
winreg = "0.55.0"
